<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Readings</string>
    <string name="copyright">Copyright 2013 Andrew Joiner</string>
    <string name="about_app_text">
\nCopyright 2013 Andrew Joiner
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
\nyou may not use this file except in compliance with the License.
\nYou may obtain a copy of the License at
\n
\n    http://www.apache.org/licenses/LICENSE-2.0
\n
\nUnless required by applicable law or agreed to in writing, software
\ndistributed under the License is distributed on an "AS IS" BASIS,
\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
\nSee the License for the specific language governing permissions and
\nlimitations under the License.
\n
\nThis app collects anonymous statistics/crash reports.
\nThis can be disabled in settings.
\n
\n
\n- Some assets (e.g. icons) were created using the Android Asset Studio
\n- Double-espresso by JakeWharton was used in the creation of this app.
\n
\n------------------------------------------------------------------------
\nAndroid DirectoryChooser by Pascal Hartig is used in this app
\nand is licensed as follows:
\n
\n        Copyright 2013-2014 Pascal Hartig
\n
\nLicensed under the Apache License, Version 2.0 (the "License");
\nyou may not use this file except in compliance with the License.
\nYou may obtain a copy of the License at
\n
\nhttp://www.apache.org/licenses/LICENSE-2.0
\n
\nUnless required by applicable law or agreed to in writing, software
\ndistributed under the License is distributed on an "AS IS" BASIS,
\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
\nSee the License for the specific language governing permissions and
\nlimitations under the License.
\n------------------------------------------------------------------------
\n
</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_date">Date</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_brightness">Brightness</string>
    <string name="menu_settings">Settings</string>
    <string name="activity_title_settings">Settings</string>
    <string name="pref_key_night_mode">night_mode</string>
    <string name="pref_key_show_summary">ShowSummary</string>
    <string name="Lorem">Lorem</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="loading">"Loading&#8230;"</string>
    <string name="pref_title_show_summary">Show chapter summary</string>
    <string name="sorry_no_summary_available_yet">Sorry, no summary available, yet.</string>
    <string name="whats_new">What\'s New</string>
    <string name="whats_new_in">What\'s New in</string>
    <string name="pref_summary_show_summary">Show passage summaries if available</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_connect">Connect</string>
    <string name="pref_title_rate">Rate this app</string>
    <string name="pref_summary_rate">If you find this app helpful, please consider rating it and clicking +1</string>
    <string name="pref_title_web_site">Web site</string>
    <string name="pref_summary_web_site">Help and feedback</string>
    <string name="about_readings">About Readings</string>
    <string name="about_content_text">
\n- Reading plan sourced from The Bible Companion reading plan as published by The Christadelphian (http://www.thechristadelphian.com).
\n                
\n- Chapter summaries provided by Dean Brown, PsalmOneNineteen.org</string>
    <string name="about_content_title">Content</string>
    <string name="about_source_text">App source code available at https://github.com/tekkies/readings</string>
    <string name="about_app_title">App</string>
    <string name="action_day_night">Day/Night</string>
    <string name="title_install">Install</string>
    <string name="install_kjv_bible_plugin">Install KJV Bible Plugin?</string>
    <string name="ok">OK</string>
    <string name="listen">Listen</string>
    <string name="read_offlice">Read offline</string>
    <string name="read_online">Read online</string>
    <string name="unknown">Unknown</string>
    <string name="about_content">About Content</string>
    <string name="larger_text">Larger Text</string>
    <string name="smaller_text">Smaller Text</string>
    <string name="you_can_also_pinch_to_zoom">You can also pinch to zoom</string>
    <string name="please_upgrade_the_kjv_bible_plugin">Please update your KJV Bible plugin for the latest features</string>
    <string name="upgrade_plugin">Update Plugin</string>
    <string name="pref_key_enable_analytics">pref_EnableAnalytics</string>
    <string name="pref_summary_enable_analytics">Please help me improve the app by enabling anonymous statistics reporting</string>
    <string name="pref_title_enable_analytics">Enable anonymous statistics</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="pref_summary_privacy_policy">Click to view the privacy policy</string>
    <string name="search">Search</string>
    <string name="searching">Searching&#8230;</string>
    <string name="test">Test</string>
    <string name="mp3_search">MP3 Search</string>
    <string name="pref_title_mp3">MP3 integration</string>
    <string name="pref_summary_mp3">Search for MP3 Bible installations to connect with</string>
    <string name="not_found">Not found - try pressing search</string>
    <string name="mp3_not_found_goto_settings">MP3 not found.  Please go to Settings > MP3 to reconfigure.</string>
    <string name="found">"Found: "</string>
    <string name="instructions">Instructions</string>
    <string name="starting_search">Starting search&#8230;</string>
    
    <string name="feedback_suggestion">I have a suggestion</string>
    <string name="feedback_bug">I found a bug</string>
    <string name="feedback_rate">I\'d like to rate this app 5-stars</string>
    <string name="feedback_beta">Beta community feedback</string>
    <string name="bug_email">android@tekkies.co.uk</string>
    <string name="bug_subject">Readings app bug</string>
    <string name="bug_content">I found a bug in the app.  This is what happened&#8230;</string>
    <string name="bug_chooser_title">Send mail&#8230;</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="Study">Study</string>
    <string name="install_mysword_bible_app">Install MySword Bible app?</string>
    <string name="sorry_no_market_installed">Sorry the market is not installed</string>
    <string name="discuss">Discuss</string>
    
    
    
</resources>