<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_title_general" >
        
        <PreferenceScreen
        android:title="@string/pref_title_mp3" 
        android:summary="@string/pref_summary_mp3">
        <intent android:action=".activity.ContentLocationActivity"/>
    </PreferenceScreen>
        
        <CheckBoxPreference
            android:key="@string/pref_key_show_summary"
            android:title="@string/pref_title_show_summary"
            android:summary="@string/pref_summary_show_summary"
            android:defaultValue="true"
             />
        <CheckBoxPreference
            android:key="@string/pref_key_enable_analytics"
            android:summary="@string/pref_summary_enable_analytics"
            android:title="@string/pref_title_enable_analytics"
            android:defaultValue="true" 
            />

        </PreferenceCategory>
        <PreferenceScreen
            android:title="@string/pref_title_privacy_policy" 
            android:summary="@string/pref_summary_privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://tekkies.co.uk/readings-privacy-policy/" />
        </PreferenceScreen>
    
    <PreferenceCategory android:title="@string/pref_title_connect" >
        <PreferenceScreen
            android:summary="@string/pref_summary_rate"
            android:title="@string/pref_title_rate" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://market.android.com/details?id=uk.co.tekkies.readings" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/pref_title_web_site" 
            android:summary="@string/pref_summary_web_site">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://tekkies.co.uk/bible-reading-app/" />
        </PreferenceScreen>
    </PreferenceCategory>

    
</PreferenceScreen>